2005-09-19 00:30  hjanuschka

	* bartlby.cfg, src/sched.c: replication works now

2005-09-18 13:28  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/bartlby.c,
	  src/replication.c, src/sched.c, src/client/portier.c,
	  src/libs/mysql.c: replication now works :-) core: can run as
	  slave and load data from a file instead of data_lib ui: displays
	  a warning if in slave mode to not add/modify servers/services
	  portier: recieves and writes shm dump to disk so hot stand by
	  should be possible ;-) slave also does service checking

2005-09-18 07:05  hjanuschka

	* src/bartlby.c: compile warnings

2005-09-18 07:03  hjanuschka

	* bartlby.cfg, bartlby.startup, src/replication.c,
	  src/client/portier.c: replication is false by default now need to
	  fix the damn write()/read() -> while() sh**

2005-09-18 06:04  hjanuschka

	* include/bartlby.h, src/bartlby.c, src/replication.c,
	  src/client/Makefile, src/client/agent.c, src/client/portier.c:
	  replication interface (currently just a try out) one instance can
	  now replicate itself to another using portier as a transport way
	  FIXME: need to sort out a binary write() problem

2005-09-18 03:33  hjanuschka

	* ChangeLog, include/bartlby.h, src/Makefile, src/replication.c,
	  src/sched.c: [no log message]

2005-09-18 02:56  hjanuschka

	* ChangeLog: [no log message]

2005-09-16 23:09  hjanuschka

	* ChangeLog: [no log message]

2005-09-15 22:33  hjanuschka

	* ChangeLog: [no log message]

2005-09-15 00:01  hjanuschka

	* ChangeLog, src/check.c, src/client/agent.c: debug in data_lib
	  added and removed agent: off by two :-) *fG* malloc error
	  producing magic char's  (fixed)

2005-09-14 00:11  hjanuschka

	* ChangeLog, bartlby.cfg, src/client/agent.c, src/client/cmd.c,
	  src/client/portier.c: ip_list moved to .cfg	  allowed_ips load
	  limit moved to cfg	 agent_load_limit

	  portier now also uses ip list to verify ip of connector

	  portier: passive check without plg args fixed
